--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -146,7 +146,7 @@
     {{/if}}
 
     <script src="{{ path_to_root }}highlight.min.js"></script>
-    <script src="{{ path_to_root }}book.js" id="book"></script>
+    <script src="{{ path_to_root }}book.js"></script>
 
     {{#if mathjax_support}}
     <script async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
