Improved display during page loading 💿
Countermeasure for the problem of unnatural display during loading (possibly) in slow communication environment.

--- a/scss/theme/chrome.scss
+++ b/scss/theme/chrome.scss
@@ -252,6 +252,8 @@ a > .hljs {
 }
 
 .sidebar {
+  visibility: hidden;  // Initially, it is hidden.
+
   color: var(--sidebar-fg);
   background-color: var(--sidebar-bg);
 
