Integrate `highlight` and `clipboard` processing into `book.js` 📚

--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -135,9 +135,8 @@
       });
     </script>
 
-    <script defer src="{{ path_to_root }}highlight.min.js"></script>
-    <script defer src="{{ path_to_root }}clipboard.min.js"></script>
-    <script defer src="{{ path_to_root }}book.js"></script>
+    <script async src="{{ path_to_root }}book.js"></script>
+
     {{#if search_js}}
     <script defer src="{{ path_to_root }}mark.es6.min.js"></script>
     <script defer src="{{ path_to_root }}elasticlunr.min.js"></script>
