`Catppuccin for mdBook` version from v0.2.1 to v1.0.0 🐈‍⬛ ☕ We used to offer customized `latte` and `frappe`, but we have decided to make them fully compliant.
However, the impression will still be very different, so if you can't forget the taste of your old `latte`, please try the new `au lait` menu.

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 @use 'catppuccin';
-@use 'catppuccin-highlight';
+@use 'catppuccin-au-lait';
 @use 'headline';
 @use 'mdbook-admonish';
+@use 'catppuccin-admonish';
 @use 'pagetoc';
 @use 'footnote';
