--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -42,6 +42,7 @@
             <i class="fa-palette"></i>
           </button>
           <ul id="theme-list" class="theme-popup" aria-label="Themes" role="menu">
+            <li role="none"><button role="menuitem" class="theme" id="au-lait">Au Lait</button></li>
             <li role="none"><button role="menuitem" class="theme" id="latte">Latte</button></li>
             <li role="none"><button role="menuitem" class="theme" id="frappe">Frappé</button></li>
             <li role="none"><button role="menuitem" class="theme" id="macchiato">Macchiato</button></li>
