--- a/scss/fonts/fonts.scss
+++ b/scss/fonts/fonts.scss
@@ -5,7 +5,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
-  src: url('OpenSans-Regular.woff2') format('woff2');
+  src: url(OpenSans-Regular.woff2) format('woff2');
   font-display: swap;
 }
 
@@ -13,7 +13,7 @@
   font-family: 'Open Sans';
   font-style: italic;
   font-weight: 400;
-  src: url('OpenSans-Italic.woff2') format('woff2');
+  src: url(OpenSans-Italic.woff2) format('woff2');
   font-display: swap;
 }
 
@@ -21,7 +21,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 700;
-  src: url('OpenSans-Bold.woff2') format('woff2');
+  src: url(OpenSans-Bold.woff2) format('woff2');
   font-display: swap;
 }
 
@@ -29,7 +29,7 @@
   font-family: 'Open Sans';
   font-style: italic;
   font-weight: 700;
-  src: url('OpenSans-BoldItalic.woff2') format('woff2');
+  src: url(OpenSans-BoldItalic.woff2) format('woff2');
   font-display: swap;
 }
 
@@ -39,7 +39,7 @@
     font-family: 'Source Code Pro';
     font-style: normal;
     font-weight: 500;
-    src: url('SourceCodePro-Medium.woff2') format('woff2');
+    src: url(SourceCodePro-Medium.woff2) format('woff2');
     font-display: swap;
   }
 }
@@ -49,7 +49,7 @@
     font-family: 'SauceCodePro NF';
     font-style: normal;
     font-weight: 500;
-    src: url('SauceCodePro/SauceCodeProNerdFont-Medium.woff2') format('woff2');
+    src: url(SauceCodePro/SauceCodeProNerdFont-Medium.woff2) format('woff2');
     font-display: swap;
   }
 }
@@ -57,7 +57,7 @@
 /* icomoon */
 @font-face {
   font-family: 'icomoon';
-  src: url('icomoon.woff2') format('woff2');
+  src: url(icomoon.woff2) format('woff2');
   font-display: swap;
 }
 
