--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -10,7 +10,7 @@ $menu-bar-height: 2.6rem;
 $jump-shift: 1.25rem;
 
 $mono-font: 'SauceCodePro NF', 'Source Code Pro', Consolas, 'Ubuntu Mono', Menlo, 'DejaVu Sans Mono', monospace;
-$code-font-size: 0.82em; // please adjust the ace font size accordingly in editor.js
+$code-font-size: 0.82em;
 
 $color-pink: #ffb2cc;
 $color-purple: #dcb7f1;
