--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -35,7 +35,7 @@
     <div class="top-bar">
       <div id="menu-bar" class="menu-bar">
         <div class="left-buttons">
-          <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents (Shortkey: T)" aria-label="Toggle Table of Contents" aria-controls="sidebar">
+          <button id="sidebar-toggle" class="icon-button" type="button" title="Toggle Table of Contents (Shortkey: T )" aria-label="Toggle Table of Contents" aria-controls="sidebar">
             <i class="fa-list-ul"></i>
           </button>
           <button id="theme-toggle" class="icon-button" type="button" title="Change theme" aria-label="Change theme" aria-haspopup="true" aria-expanded="false" aria-controls="theme-list">
@@ -50,7 +50,7 @@
           </ul>
 
           {{#if search_enabled}}
-          <button id="search-toggle" class="icon-button" type="button" title="Toggle Search Box (Shortkey: S)"
+          <button id="search-toggle" class="icon-button" type="button" title="Toggle Search Box (Shortkey: / )"
   aria-label="Toggle Search Box" aria-expanded="false" aria-keyshortcuts="S" aria-controls="searchbar">
             <i class="fa-magnifying-glass"></i>
           </button>
