fix: unintentional first character of a line 🍿
In some environments, the first letter of the line was displayed in the theme list.

--- a/scss/theme/chrome.scss
+++ b/scss/theme/chrome.scss
@@ -333,6 +333,7 @@ a:visited {
   color: var(--fg);
   background: var(--theme-popup-bg);
   border: 0.1rem solid var(--theme-popup-border);
+  list-style-type: none;
   margin: 0;
   padding: 0.4rem;
   display: none;
