--- a/scss/fonts/fonts.scss
+++ b/scss/fonts/fonts.scss
@@ -1,10 +1,11 @@
 @use '../variables.scss' as var;
 
-/* Open Sans is licensed under the Apache License, Version 2.0. See http://www.apache.org/licenses/LICENSE-2.0 */
+// Open Sans is licensed under the Apache License, Version 2.0.
+// See http://www.apache.org/licenses/LICENSE-2.0
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
-  font-weight: 400;
+  font-weight: normal;
   src: url(OpenSans-Regular.woff2) format('woff2');
   font-display: swap;
 }
@@ -12,7 +13,7 @@
 @font-face {
   font-family: 'Open Sans';
   font-style: italic;
-  font-weight: 400;
+  font-weight: normal;
   src: url(OpenSans-Italic.woff2) format('woff2');
   font-display: swap;
 }
@@ -20,7 +21,7 @@
 @font-face {
   font-family: 'Open Sans';
   font-style: normal;
-  font-weight: 700;
+  font-weight: bold;
   src: url(OpenSans-Bold.woff2) format('woff2');
   font-display: swap;
 }
@@ -28,30 +29,29 @@
 @font-face {
   font-family: 'Open Sans';
   font-style: italic;
-  font-weight: 700;
+  font-weight: bold;
   src: url(OpenSans-BoldItalic.woff2) format('woff2');
   font-display: swap;
 }
 
-/* Source Code Pro is under the Open Font License. See https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL */
-@media only screen and (max-width: var.$mobile-max-width) {
-  @font-face {
-    font-family: 'Source Code Pro';
-    font-style: normal;
-    font-weight: 500;
-    src: url(SourceCodePro-Medium.woff2) format('woff2');
-    font-display: swap;
-  }
+// Source Code Pro is under the Open Font License.
+// See https://github.com/adobe-fonts/source-code-pro/blob/release/LICENSE.md
+@font-face {
+  font-family: 'Source Code Pro';
+  font-style: normal;
+  font-weight: bolder;
+  src: url(SourceCodePro-Medium.woff2) format('woff2');
+  font-display: swap;
 }
 
-@media only screen and (min-width: var.$mobile-max-width) {
-  @font-face {
-    font-family: 'SauceCodePro NF';
-    font-style: normal;
-    font-weight: 500;
-    src: url(SauceCodePro/SauceCodeProNerdFont-Medium.woff2) format('woff2');
-    font-display: swap;
-  }
+// https://www.nerdfonts.com
+// See https://github.com/ryanoasis/nerd-fonts/blob/master/LICENSE
+@font-face {
+  font-family: 'Symbols Nerd Font Mono';
+  font-style: normal;
+  font-weight: bolder;
+  src: url(NerdFontsSymbolsOnly/SymbolsNerdFontMono-Regular.woff2) format('woff2');
+  font-display: swap;
 }
 
 /* icomoon */
