Apply anti-aliasing ❄️ Only do this for the following elements - Menu Bar - Code Block

--- a/scss/theme/chrome.scss
+++ b/scss/theme/chrome.scss
@@ -110,6 +110,9 @@ a:visited {
     z-index: 101;
     opacity: 0.92;
 
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+
     i,
     .icon-button {
       cursor: pointer;
