fix: Clipboard button does not display properly 📋
BTW, I changed my icon.
Wouldn't it be nice for a change? 🌿

--- a/scss/theme/general.scss
+++ b/scss/theme/general.scss
@@ -110,6 +110,7 @@ pre {
     }
 
     button {
+      font-family: "Symbols Nerd Font Mono";
       cursor: inherit;
       margin: 0 0.4rem;
       padding: 0.4rem 0.4rem;
