--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -109,10 +109,7 @@
     <link rel="stylesheet" href="{{ path_to_root }}fonts/fonts.css" async>
     {{#each additional_css}}<link rel="stylesheet" href="{{ ../path_to_root }}{{ this }}" async>{{/each}}
 
-    <script defer type="module" src="{{ path_to_root }}book.js"></script>
-    {{#if search_js}}
-    <script defer type="module" src="{{ path_to_root }}searcher.js" id="searcher" data-pathtoroot="{{ path_to_root }}"></script>
-    {{/if}}
-    {{#each additional_js}}<script async src="{{ ../path_to_root }}{{this}}"></script>{{/each}}
+    <script defer type="module" src="{{ path_to_root }}book.js" id = "bookjs" data-pathtoroot="{{ path_to_root }}"></script>
+    {{#each additional_js}}<script defer src="{{ ../path_to_root }}{{this}}"></script>{{/each}}
   </body>
 </html>
