--- a/scss/theme/general.scss
+++ b/scss/theme/general.scss
@@ -31,6 +31,66 @@ body {
   }
 }
 
+.page {
+
+  // For the style attribute, display: grid or block is added from the JS code.
+  // (Specify an initial value to prevent layout shift on PC.)
+  @media only screen and (min-width: var.$mobile-max-width) {
+    display: grid;
+  }
+
+  grid-template-columns: var.$sidebar-width 1fr;
+  min-height: calc(100dvh - var.$menu-bar-height);
+}
+
+.content {
+  display: grid;
+  grid-template-columns: 1rem 1fr 1rem;
+  column-gap: 1rem;
+
+  @media only screen and (min-width: var.$enable-pagetoc) {
+    grid-template-columns: 1rem 1fr 0 var.$pagetoc-width 0;
+  }
+
+  main {
+    font-size: 0.9rem;
+    min-width: 0;
+    word-break: auto-phrase;
+  }
+
+  a {
+    text-decoration: none;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  img,
+  video {
+    display: flex;
+    margin: 1rem auto;
+    border-radius: 0.4rem;
+    max-width: 100%;
+    height: auto;
+  }
+
+  .header {
+    &:link {
+      color: var(--fg);
+      text-decoration: none;
+    }
+
+    &:visited {
+      color: var(--fg);
+    }
+
+    &:visited:hover {
+      text-decoration: none;
+    }
+  }
+}
+
 code {
   display: inline;
   font-family: var.$mono-font !important;
@@ -51,120 +111,4 @@ code {
 
 .hidden {
   display: none !important;
-}
-
-table {
-  margin: 0 auto;
-  border-collapse: collapse;
-
-  td {
-    border: 0.1rem var(--table-border-color) solid;
-  }
-
-  thead {
-    background: var(--table-header-bg);
-
-    td {
-      font-weight: 700;
-      border: none;
-    }
-
-    th {
-      padding: 0.3rem 0.2rem;
-    }
-
-    tr {
-      border: 0.1rem var(--table-header-bg) solid;
-    }
-  }
-
-  tbody {
-    tr {
-      &:nth-child(2n) {
-        background: var(--table-alternate-bg); // Alternate background colors for rows
-      }
-    }
-  }
-}
-
-pre {
-  position: relative;
-
-  &>.buttons {
-    position: absolute;
-    right: 0;
-    top: 0.4rem;
-
-    color: var(--sidebar-fg);
-    cursor: pointer;
-    visibility: hidden;
-    opacity: 0;
-    transition:
-      visibility 0.1s linear,
-      opacity 0.1s linear;
-
-    :hover {
-      color: var(--sidebar-active);
-      border-color: var(--icons-hover);
-      background-color: var(--theme-hover);
-    }
-
-    button {
-      font-family: "Symbols Nerd Font Mono";
-      cursor: inherit;
-      margin: 0 0.4rem;
-      padding: 0.4rem 0.4rem;
-      border-style: solid;
-      border-width: 0.1rem;
-      border-radius: 0.4rem;
-      border-color: var(--icons);
-      background-color: var(--theme-popup-bg);
-      transition: 100ms;
-      transition-property: color, border-color, background-color;
-      color: var(--icons);
-    }
-  }
-
-  &>code {
-    display: block;
-    overflow-x: auto;
-
-    padding: 0.7rem;
-    border-radius: 0.4rem;
-  }
-
-  &:hover>.buttons {
-    visibility: visible;
-    opacity: 1;
-  }
-}
-
-@media (pointer: coarse) {
-  pre>.buttons button {
-    padding: 0.4rem 1rem; // On mobile, make it easier to tap buttons.
-  }
-}
-
-mark {
-  color: var(--fg);
-  background: linear-gradient(rgba(0, 0, 0, 0) 70%, var(--search-mark-bg));
-}
-
-blockquote {
-  padding: 0 1em;
-  color: #9e9e9e;
-  border-left: 0.25em solid #9e9e9e;
-  margin: 0;
-}
-
-kbd {
-  background-color: var(--table-border-color);
-  border-radius: 0.3rem;
-  box-shadow: inset 0 -0.1rem 0 var(--theme-hover);
-  display: inline-block;
-  font-size: var.$code-font-size;
-  font-family: var.$mono-font;
-  margin: 0 0.1rem;
-  padding: 0.2rem 0.3rem;
-  vertical-align: top;
 }
