--- a/scss/_pagetoc.scss
+++ b/scss/_pagetoc.scss
@@ -18,41 +18,41 @@
 
     a {
       color: var(--fg);
+      text-decoration: none;
+
       padding-bottom: 0.5em;
       padding-top: 0.5em;
 
       &:hover {
-        background: var(--sidebar-bg);
-        text-decoration: none;
+        color: var(--sidebar-active);
+        background-image: linear-gradient(to right, var(--sidebar-bg) 40%, var(--bg));
       }
-      &.active {
-        font-weight: 500;
 
-        .au-lait :is(&), .latte :is(&) {
-          background: #fff8c5;
-          color: #1f2328;
-        }
-        .frappe :is(&), .macchiato :is(&), .mocha :is(&) {
-          background: #4b2900;
-          color: #f8e3a1;
-        }
+      &.active {
+        background-image: linear-gradient(to right, var(--page-toc-background) 60%, var(--bg));
+        color: var(--page-toc-color);
       }
 
       &.H1 {
         padding-left: 1em;
       }
+
       &.H2 {
         padding-left: 2em;
       }
+
       &.H3 {
         padding-left: 3em;
       }
+
       &.H4 {
         padding-left: 3.6em;
       }
+
       &.H5 {
         padding-left: 4.2em;
       }
+
       &.H6 {
         padding-left: 4.8em;
       }
