--- a/scss/_chrome.scss
+++ b/scss/_chrome.scss
@@ -177,12 +177,6 @@ kbd {
   li {
     list-style-type: none;
 
-    .part-title {
-      color: var(--sidebar-fg);
-      margin: 4rem 0;
-      font-weight: bold;
-    }
-
     a {
       display: block;
       color: var(--sidebar-fg);
@@ -349,6 +343,8 @@ table {
 .content main a:link,
 a:visited {
   color: var(--links);
+  margin-left: 0.2rem;
+  margin-right: 0.2rem;
 }
 
 .result-no-output {
@@ -360,7 +356,7 @@ a:visited {
   top: var.$menu-bar-height;
   left: 2.4rem;
   border-radius: 0.4rem;
-  font-size: 0.7em;
+  font-size: 0.7rem;
   color: var(--fg);
   background: var(--theme-popup-bg);
   border: 0.1rem solid var(--theme-popup-border);
