--- a/scss/theme/general.scss
+++ b/scss/theme/general.scss
@@ -43,6 +43,44 @@ body {
   min-height: calc(100dvh - var.$menu-bar-height);
 }
 
+.theme-popup {
+  position: absolute;
+  top: var.$menu-bar-height;
+  left: 2.4rem;
+  border-radius: 0.4rem;
+  font-size: 0.7rem;
+  color: var(--fg);
+  background: var(--theme-popup-bg);
+  border: 0.1rem solid var(--theme-popup-border);
+  list-style-type: none;
+  margin: 0;
+  padding: 0.4rem;
+  display: none;
+  overflow: hidden;
+
+  .default {
+    color: var(--icons);
+  }
+
+  .theme {
+    width: 100%;
+    border: 0;
+    margin: 0;
+    padding: 0.2rem 1.25rem;
+    line-height: 1.5rem;
+    white-space: nowrap;
+    text-align: left;
+    cursor: pointer;
+    color: inherit;
+    background: inherit;
+    font-size: inherit;
+
+    &:hover {
+      background-color: var(--theme-hover);
+    }
+  }
+}
+
 .content {
   display: grid;
   grid-template-columns: 1rem 1fr 1rem;
@@ -56,6 +94,13 @@ body {
     font-size: 0.9rem;
     min-width: 0;
     word-break: auto-phrase;
+
+    a:link,
+    a:visited {
+      color: var(--links);
+      margin-left: 0.2rem;
+      margin-right: 0.2rem;
+    }
 
     .admonition-title {
       a {
