Moving fonts to `woff` directory 🐺
Due to the removal of the `copy-fonts` parameter, font files that are not use on this site have been placed in the `fonts` directory.

Since it is tedious to remove unused files one by one,
we decided to move the use files to the `woff` directory and remove the entire `fonts` directory created by `mdBook`.

--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -6,7 +6,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: normal;
-  src: url(../fonts/OpenSans-Regular.woff2) format('woff2');
+  src: url(../woff/OpenSans-Regular.woff2) format('woff2');
   font-display: swap;
 }
 
@@ -14,7 +14,7 @@
   font-family: 'Open Sans';
   font-style: italic;
   font-weight: normal;
-  src: url(../fonts/OpenSans-Italic.woff2) format('woff2');
+  src: url(../woff/OpenSans-Italic.woff2) format('woff2');
   font-display: swap;
 }
 
@@ -22,7 +22,7 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: bold;
-  src: url(../fonts/OpenSans-Bold.woff2) format('woff2');
+  src: url(../woff/OpenSans-Bold.woff2) format('woff2');
   font-display: swap;
 }
 
@@ -30,7 +30,7 @@
   font-family: 'Open Sans';
   font-style: italic;
   font-weight: bold;
-  src: url(../fonts/OpenSans-BoldItalic.woff2) format('woff2');
+  src: url(../woff/OpenSans-BoldItalic.woff2) format('woff2');
   font-display: swap;
 }
 
@@ -40,7 +40,7 @@
   font-family: 'Source Code Pro';
   font-style: normal;
   font-weight: bolder;
-  src: url(../fonts/SourceCodePro-Medium.woff2) format('woff2');
+  src: url(../woff/SourceCodePro-Medium.woff2) format('woff2');
   font-display: swap;
 }
 
@@ -50,6 +50,6 @@
   font-family: 'Symbols Nerd Font Mono';
   font-style: normal;
   font-weight: bolder;
-  src: url(../fonts/NerdFontsSymbolsOnly/SymbolsNerdFontMono-Regular.woff2) format('woff2');
+  src: url(../woff/NerdFontsSymbolsOnly/SymbolsNerdFontMono-Regular.woff2) format('woff2');
   font-display: swap;
 }
