--- a/scss/_additional-color.scss
+++ b/scss/_additional-color.scss
@@ -2,7 +2,7 @@
   --page-toc-background: #fff8c5;
   --page-toc-color: #1f2328;
 
-  --search-score: #40a02b
+  --search-score: #40a02b;
 }
 
 .frappe, .macchiato, .mocha {
