fix: `z-order` and `border-color` were not set correctly ⛩️
- When the color palette is opened while the search results screen is open, the color palette is now displayed in the foreground.
- The index value on the top menu bar has also been adjusted.
- The color of the border of the search results has been changed (after all this time).

--- a/scss/_chrome.scss
+++ b/scss/_chrome.scss
@@ -102,7 +102,7 @@ pre {
     gap: 1em;
 
     background-color: var(--bg);
-    z-index: 101;
+    z-index: 10;
     opacity: 0.92;
 
     -webkit-font-smoothing: antialiased;
@@ -324,8 +324,9 @@ table {
 
   padding: 0.8em;
 
-  border: 0.1em solid var(--searchbar-border-color);
+  border: 0.1em solid var(--theme-popup-border);
   border-radius: 1.6em;
+  z-index: 20;
 
   ul {
     list-style: none;
