--- a/scss/_chrome.scss
+++ b/scss/_chrome.scss
@@ -36,6 +36,20 @@ mark {
   background: none;
 }
 
+code {
+  display: inline;
+  font-family: var.$mono-font !important;
+  font-size: var.$code-font-size;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  color: var(--inline-code-color);
+  background-color: var(--quote-bg);
+  padding: 0.1rem 0.3rem;
+  border-radius: 0.2rem;
+}
+
 pre {
   position: relative;
 
@@ -210,6 +224,10 @@ pre {
   }
 }
 
+.table-wrapper {
+  overflow-x: auto; // make wide tables scroll if they overflow
+}
+
 table {
   margin: 1rem auto;
   border-collapse: collapse;
@@ -353,6 +371,27 @@ table {
           font-weight: bold;
         }
       }
+    }
+  }
+}
+
+
+.theme-popup {
+  .theme {
+    width: 100%;
+    border: 0;
+    margin: 0;
+    padding: 0.2rem 1.25rem;
+    line-height: 1.5rem;
+    white-space: nowrap;
+    text-align: left;
+    cursor: pointer;
+    color: inherit;
+    background: inherit;
+    font-size: inherit;
+
+    &:hover {
+      background-color: var(--theme-hover);
     }
   }
 }
