--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -88,11 +88,15 @@
 
           <nav class="nav-wrapper" aria-label="Page navigation">
             {{#previous}}
-            <a rel="prev" href="{{ path_to_root }}{{link}}" class="nav-chapters previous icon-button" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left"></a>
+            <a rel="prev" href="{{ path_to_root }}{{link}}" class="nav-chapters previous icon-button" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+               {{title}}
+            </a>
             {{/previous}}
 
             {{#next}}
-            <a rel="next" href="{{ path_to_root }}{{link}}" class="nav-chapters next icon-button" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right"></a>
+            <a rel="next" href="{{ path_to_root }}{{link}}" class="nav-chapters next icon-button" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+              {{title}} 
+            </a>
             {{/next}}
           </nav>
         </main>
